1920 screen main page done

--- a/app/components/header.html
+++ b/app/components/header.html
@@ -74,12 +74,19 @@
                 <h6 class="menu-1">каркасные дома в Москве и МО</h6>
               </div>
             </div>
+
             <div class="head__item">
               <span class="small">от</span>
               <span class="num">48</span>
               <span class="menu-1">дней</span>
               <span class="small">до новоселья</span>
             </div>
+
+            <a class="burger" href="#!">
+              <h6 class="menu-2">Меню</h6>
+              <span></span>
+            </a>
+
             <div class="head__social">
               <a class="head__social-link" href="viber://chat?number=89165562526">
                 <img class="head__social-img" src="images/Viber.svg" alt="viber">
@@ -99,7 +106,7 @@
                 <h6 class="menu-2">Звоните с 9 до 18 часов</h6>
               </div>
               <div class="head__info-item">
-                <button class="btn-green" type="button">
+                <button class="btn-green menu-1" type="button">
                   Заказать звонок
                 </button>
               </div>
