--- a/app/scss/_media.scss
+++ b/app/scss/_media.scss
@@ -1,11 +1,517 @@
 @media (max-width: 1200px) {}
 
-@media (max-width: 991px) {}
+@media (max-width: 1024px) {
+  h1 {
+    font-size: 36px;
+  }
 
-@media (max-width: 768px) {}
+  h2 {
+    font-size: 32px;
+  }
 
-@media (max-width: 600px) {}
+  h3 {
+    font-size: 22px;
+  }
 
-@media (max-width: 480px) {}
+  h4 {
+    font-size: 18px;
+    font-style: normal;
+  }
+
+  h5 {
+    font-size: 18px;
+  }
+
+  .menu-1 {
+    font-size: 13px;
+  }
+
+  .menu-2 {
+    font-size: 12px;
+  }
+
+  p {
+    font-size: 14px;
+  }
+
+  .small {
+    font-size: 13px;
+  }
+
+  .container {
+    max-width: 970px;
+  }
+
+  .head__item {
+    display: none;
+  }
+
+  .burger {
+    display: flex;
+  }
+
+  .menu {
+    display: none;
+  }
+
+  .hero__inner {
+    min-height: 440px;
+    filter: unset;
+    background-position: center right;
+    margin-left: -18px;
+    margin-right: -18px;
+    width: calc(100% + 36px);
+    border-radius: 0;
+  }
+
+  .hero__content {
+    background: var(--white, #fff);
+    max-width: 460px;
+    padding: 0 20px 20px;
+  }
+
+  .hero {
+    margin-bottom: 80px;
+  }
+
+  .case__tab-item {
+    padding: 15px 30px 11px 30px;
+  }
+
+  .case__item {
+    gap: 40px;
+  }
+
+  .case__item-body {
+    padding: 40px 0;
+    gap: 20px;
+  }
+
+  .case__cover-img {
+    max-width: 845px;
+    height: 450px;
+    border-radius: 20px;
+  }
+
+  .case__slider .slick-arrow,
+  .case__cover-btn {
+    width: 55px;
+    height: 142px;
+  }
+
+  .case__slider .slick-arrow {
+    right: -5px;
+    width: 55px;
+    height: 142px;
+  }
+
+  .case__cover-btn::before {
+    width: 20px;
+    height: 20px;
+    top: -20px;
+    background: radial-gradient(circle at right top, transparent 20px, var(--bg, #F9F9F9) 20px);
+  }
+
+  .case__cover-btn::after {
+    width: 20px;
+    height: 20px;
+    bottom: -20px;
+    background: radial-gradient(circle at right bottom, transparent 20px, var(--bg, #F9F9F9) 20px);
+  }
+
+  .case__btns {
+    margin-top: 10px;
+  }
+
+  .case__list-img {
+    width: 20px;
+    height: 20px;
+  }
+
+  .case__slider .slick-slide {
+    margin: 0 80px 0 0;
+  }
+
+  .case__slider {
+    margin-left: -370px;
+  }
+
+  .case__slider-item {
+    padding: 30px 0 80px;
+  }
+
+  .calculation {
+    max-height: 623px;
+    min-height: 623px;
+  }
+
+  .calculation__content-block {
+    gap: 20px;
+    padding: 30px;
+  }
+
+  .calculation__inner {
+    padding-top: 80px;
+  }
+
+  .calculation__desc-items {
+    padding: 20px;
+    gap: 10px;
+  }
+
+  .calculation__content-item {
+    margin-bottom: 20px;
+  }
+
+  .calculation__banner {
+    padding: 30px;
+  }
+
+  .banner {
+    margin-bottom: 80px;
+  }
+
+  .banner__inner {
+    padding-left: 40px;
+  }
+
+  .banner__item:last-child {
+    padding: 40px 40px 40px 94px;
+  }
+
+  .advantages {
+    margin-bottom: 80px;
+  }
+
+  .advantages__head {
+    margin-bottom: 30px;
+  }
+
+  .advantages__block {
+    margin-bottom: 30px;
+    gap: 100px;
+  }
+
+  .advantages__img {
+    margin: 0 0 0 -256px;
+    height: 450px;
+  }
+
+  .advantages__list {
+    gap: 40px;
+  }
+
+  .advantages__item-img {
+    width: 60px;
+    height: 60px;
+  }
+
+  .stages {
+    padding: 80px 0;
+  }
+
+  .stages__slider {
+    margin-bottom: 20px;
+  }
+
+  .stages__item-num {
+    font-size: 80px;
+    height: 120px;
+    top: -8px;
+    left: -30px;
+  }
+
+  .stages__item::before {
+    top: 60px;
+  }
+
+  .stages__item-line {
+    top: 71px;
+  }
+
+  .stages .foundation {
+    align-items: flex-start;
+    padding: 30px;
+  }
+
+  .stages .foundation__item {
+    height: 100%;
+    justify-content: space-between;
+  }
+
+  .stages .foundation__item,
+  .stages .foundation__img {
+    width: 50%;
+    height: 190px;
+  }
+
+  .discount {
+    margin-bottom: 80px;
+  }
+
+  .discount__inner {
+    padding: 40px;
+    gap: 20px;
+  }
+
+  .discount__img {
+    width: 290px;
+    object-fit: fill;
+  }
+
+  .projects {
+    margin-bottom: 80px;
+  }
+
+  .projects__item-btns {
+    gap: 10px;
+  }
+
+  .projects__options {
+    top: 20px;
+    right: 20px;
+    padding: 20px;
+  }
+
+  .projects__options-list {
+    gap: 20px;
+  }
+
+  .projects__item {
+    height: 400px;
+  }
+
+  .projects__item-img {
+    border-radius: 20px;
+  }
+
+  .projects__item-content {
+    max-width: 403px;
+    padding: 20px 20px 0 0;
+    background: var(--white, #fff);
+    border-radius: 0 20px 20px 20px;
+    left: -1px;
+  }
+
+  .projects__item-content::before {
+    content: "";
+    width: 20px;
+    height: 20px;
+    background: radial-gradient(circle at right top, transparent 20px, var(--white, #fff) 20px);
+    position: absolute;
+    top: -20px;
+    left: 0;
+    z-index: 2;
+  }
+
+  .projects__item-text {
+    margin-bottom: 20px;
+  }
+
+  .payment {
+    margin-top: 160px;
+    padding: 0 0 80px 0;
+  }
+
+  .payment .decor {
+    height: 80px;
+    top: -80px;
+  }
+
+  .payment__item-img {
+    width: 60px;
+    height: 60px;
+  }
+
+  .map__inner {
+    height: 684px;
+  }
+
+  .blog {
+    height: 607px;
+  }
+
+  .blog__video iframe {
+    width: 620px;
+    max-height: 380px;
+  }
+
+  .blog__video-about {
+    padding: 20px;
+    border-radius: 20px 0 0 20px;
+  }
+
+  .blog__list {
+    gap: 10px;
+    padding: 20px;
+    border-radius: 20px 20px 20px 0;
+  }
+
+  .blog__item:not(:last-child) {
+    margin-bottom: 10px;
+  }
+
+  .callback {
+    margin-bottom: 80px;
+  }
+
+  .callback__inner {
+    padding: 40px;
+  }
+
+  .callback__img {
+    width: 271px;
+    top: -32px;
+    right: 20px;
+  }
+
+  .callback__input {
+    padding: 13px 20px 15px;
+  }
+
+  .faq__head {
+    margin-bottom: 30px;
+  }
+
+  .faq .ask-question {
+    padding: 40px;
+    max-width: 300px;
+  }
+
+  .faq .ask-question__text {
+    margin-bottom: 30px;
+  }
+
+  .faq__item-head {
+    padding: 15px 20px;
+  }
+
+  .faq__list {
+    border-radius: 20px;
+  }
+
+  .faq__item-text {
+    padding: 20px;
+  }
+
+  .faq {
+    margin-bottom: 80px;
+  }
+
+  .footer__inner {
+    padding: 20px 0;
+    gap: 20px;
+  }
+
+  .footer__logo-img {
+    height: 30px;
+  }
+
+  .footer__top-list {
+    gap: 20px;
+  }
+
+  .footer__menu-block h6 {
+    width: 80px;
+  }
+
+  .footer__menu-list {
+    gap: 15px;
+  }
+
+  .footer__menu {
+    padding: 0 0 0 80px;
+  }
+}
+
+@media (max-width: 900px) {
+  .head__inner {
+    gap: 10px;
+  }
+
+  .head__logo {
+    gap: 10px;
+  }
+
+  .head__logo-item {
+    display: none;
+  }
+
+  .head__info {
+    gap: 10px;
+  }
+
+  .topbar__inner,
+  .topbar__item {
+    gap: 20px;
+  }
+}
+
+@media (max-width: 768px) {
+
+  .header {
+    margin: 20px 0 30px;
+  }
+
+  .head__social {
+    display: none;
+  }
+
+  .topbar {
+    display: none;
+  }
+}
+
+@media (max-width: 600px) {
+  h1 {
+    font-size: 30px;
+  }
+
+  h2 {
+    font-size: 28px;
+  }
+
+  .head__info-item:last-child {
+    display: none;
+  }
+
+  .burger {
+    order: 1;
+    gap: 0;
+    padding: 0 14px;
+  }
+
+  .burger span,
+  .burger span::before,
+  .burger span::after {
+    width: 12px;
+  }
+
+  .burger h6 {
+    font-size: 0;
+  }
+
+  .hero {
+    margin-bottom: 60px;
+  }
+
+  .hero__inner {
+    padding: 0 30px;
+    margin: 0;
+    width: 100%;
+    border-radius: 20px;
+    background-position: center;
+  }
+
+  .hero__content {
+    padding: 0 30px 30px;
+  }
+}
+
+@media (max-width: 480px) {
+  .container {
+    max-width: 390px;
+  }
+}
 
 @media (max-width: 360px) {}
