--- a/app/scss/pages/index.scss
+++ b/app/scss/pages/index.scss
@@ -7,16 +7,16 @@
     height: auto;
     min-height: 570px;
     border-radius: 30px;
-    background-position: center left;
+    background-position: center right;
     background-repeat: no-repeat;
-    filter: drop-shadow(0px 0px 50px rgba(206, 216, 206, 0.20));
+    background-size: cover;
   }
 
   &__content {
     display: flex;
     flex-direction: column;
     gap: 30px;
-    background-color: transparent;
+    background-color: var(--white, #fff);
     max-width: 630px;
     padding: 0 30px 30px;
     border-radius: 0 0 30px 30px;
@@ -396,6 +396,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    gap: 10px;
     padding: 40px;
     color: var(--black, #2E2D2D);
     background: var(--bg, #F9F9F9);
@@ -423,7 +424,7 @@
     padding: 0 0 0 60px;
     border-radius: 30px;
     background-color: var(--green, #03844C);
-    background-position: center;
+    background-position: center right;
     background-size: cover;
     overflow: hidden;
   }
@@ -459,13 +460,10 @@
 .advantages {
   margin-bottom: 100px;
 
-  &__inner {}
-
-  &__title {
-    margin-bottom: 10px;
-  }
-
-  &__suptitle {
+  &__head {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
     margin-bottom: 40px;
   }
 
@@ -728,10 +726,10 @@
   &__img {
     position: absolute;
     right: 0;
-    bottom: 0;
+    top: -13px;
     z-index: 2;
-    width: 400px;
-    height: auto;
+    width: auto;
+    height: calc(100% + 13px);
     object-fit: cover;
   }
 }
@@ -928,7 +926,8 @@
   }
 
   &__img {
-    width: 970px;
+    max-width: 970px;
+    width: 83%;
     height: auto;
     object-fit: cover;
     position: absolute;
@@ -1067,6 +1066,12 @@
 
     &-link {
       color: var(--black, #2E2D2D);
+      transition: all 0.2s ease-out;
+
+      &:hover {
+        color: var(--green, #179860);
+        transition: all 0.2s ease-out;
+      }
     }
 
     &-name {
@@ -1097,6 +1102,7 @@
     display: flex;
     flex-direction: column;
     gap: 10px;
+    width: 75%;
   }
 
   &__suptitle {
