--- a/app/scss/pages/index.scss
+++ b/app/scss/pages/index.scss
@@ -62,7 +62,7 @@
 
   &__slider {
     display: none;
-    margin-left: -600px;
+    margin-left: -500px;
 
     &.active {
       display: block;
@@ -117,18 +117,22 @@
   &__item {
     display: flex;
     align-items: center;
+    justify-content: space-between;
     gap: 50px;
   }
 
   &__cover {
     position: relative;
+    width: 100%;
 
     &-img {
-      width: 1070px;
-      height: 570px;
+      width: 100%;
       object-fit: cover;
       border-radius: 30px;
       position: relative;
+      max-width: 1070px;
+      width: 100%;
+      max-height: 570px;
     }
 
     &-btn {
@@ -170,8 +174,7 @@
     flex-direction: column;
     gap: 30px;
     padding: 50px 0;
-    max-width: 450px;
-    width: 100%;
+    width: 30.61%;
   }
 
   &__item-head {
@@ -209,9 +212,8 @@
   color: var(--white, #fff);
   background: var(--black, #2E2D2D);
   position: relative;
-  min-height: 766px;
-  max-height: 766px;
-  margin-bottom: 342px;
+  margin-bottom: 350px;
+  height: calc(100% - 150px);
 
   .decor {
     width: 33%;
@@ -223,8 +225,8 @@
   }
 
   &__inner {
-    padding-top: 100px;
     position: relative;
+    top: 250px;
     z-index: 2;
   }
 
@@ -272,7 +274,12 @@
     }
 
     &-item {
+      display: none;
       margin-bottom: 30px;
+
+      &.calculation__show {
+        display: block;
+      }
     }
   }
 
@@ -288,7 +295,7 @@
       background: var(--grey2, #EFEFEF);
       text-align: center;
 
-      &.tab__active {
+      &.show {
         background: var(--black, #2E2D2D);
         color: var(--white, #fff);
       }
