--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -5,7 +5,9 @@
 @import 'global';
 @import 'elements/header.scss';
 @import 'elements/footer.scss';
-
 @import 'pages/index.scss';
-
+@import 'pages/site-map.scss';
+@import 'pages/privacy.scss';
+@import 'pages/technical-supervision.scss';
+@import 'pages/design.scss';
 @import 'media';
