--- a/app/components/sprite.html
+++ b/app/components/sprite.html
@@ -1,4 +1,5 @@
 <svg style="display: none;">
+
   <symbol id="faq-arrow" width="12" height="8" fill="none" xmlns="http://www.w3.org/2000/svg">
     <g>
       <path d="M11 1.5l-5 5-5-5" />
@@ -8,4 +9,11 @@
     <path d="M7 1L4.53 3.297a.793.793 0 01-1.06 0L1 1" stroke-miterlimit="10" stroke-linecap="round"
       stroke-linejoin="round" />
   </symbol>
+
+
+  <symbol id="breadcrumbs-arrow" width="4" height="7" viewBox="0 0 4 7" fill="none" xmlns="http://www.w3.org/2000/svg">
+    <path d="M1 1L2.83727 3.05808C3.05424 3.30114 3.05424 3.69886 2.83727 3.94192L1 6" stroke="#857067"
+      stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round" />
+  </symbol>
+
 </svg>
