--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -3,11 +3,16 @@
 @import 'reset';
 @import 'libs';
 @import 'global';
+
 @import 'elements/header.scss';
 @import 'elements/footer.scss';
+
 @import 'pages/index.scss';
 @import 'pages/site-map.scss';
 @import 'pages/privacy.scss';
 @import 'pages/technical-supervision.scss';
 @import 'pages/design.scss';
+@import 'pages/services.scss';
+@import 'pages/works.scss';
+
 @import 'media';
