--- a/app/scss/pages/index.scss
+++ b/app/scss/pages/index.scss
@@ -487,18 +487,23 @@
     &:last-child {
       margin-bottom: 0;
 
-      .advantages__img {
+      .advantages__cover {
         margin: 0 -375px 0 0;
       }
     }
   }
 
-  &__img {
+  &__cover {
+    margin: 0 0 0 -375px;
     width: auto;
     height: 600px;
+  }
+
+  &__img {
+    width: 100%;
+    height: 100%;
     object-fit: cover;
     border-radius: 30px;
-    margin: 0 0 0 -375px;
   }
 
   &__list {
@@ -1114,6 +1119,8 @@
     flex-direction: column;
     gap: 10px;
     width: 75%;
+    position: relative;
+    z-index: 3;
   }
 
   &__suptitle {
@@ -1123,12 +1130,15 @@
   &__form {
     display: flex;
     gap: 20px;
+    position: relative;
+    z-index: 3;
   }
 
   &__input {
     padding: 16px 24px 17px;
     border-radius: 8px;
     background: var(--white, #fff);
+    width: fit-content;
 
     &::placeholder {
       color: var(--grey, #A7A7A7);
@@ -1137,7 +1147,7 @@
 
   &__img {
     position: absolute;
-    top: -43px;
+    bottom: -11px;
     right: 30px;
     z-index: 2;
     width: 333px;
