--- a/app/scss/pages/works.scss
+++ b/app/scss/pages/works.scss
@@ -24,7 +24,7 @@
     }
 
     &:hover .works__content-body {
-      max-height: 100%;
+      max-height: 100vh;
       transition: all 0.5s ease-out;
     }
   }
