--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -14,5 +14,6 @@
 @import 'pages/design.scss';
 @import 'pages/services.scss';
 @import 'pages/works.scss';
+@import 'pages/vacancies.scss';
 
 @import 'media';
