--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -15,5 +15,6 @@
 @import 'pages/services.scss';
 @import 'pages/works.scss';
 @import 'pages/vacancies.scss';
+@import 'pages/payment-methods.scss';
 
 @import 'media';
