--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -124,6 +124,10 @@ p {
   height: 50px;
   padding: 0 24px;
   color: var(--white, #fff);
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 120%;
   border-radius: 8px;
   background: var(--green, #179860);
   cursor: pointer;
@@ -152,6 +156,10 @@ p {
   height: 50px;
   padding: 0 24px;
   color: var(--black, #2E2D2D);
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 120%;
   border-radius: 8px;
   background: var(--white, #fff);
   cursor: pointer;
@@ -179,6 +187,10 @@ p {
   height: 50px;
   padding: 0 24px;
   color: var(--black, #2E2D2D);
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 120%;
   border-radius: 8px;
   background: var(--bg, #F9F9F9);
   cursor: pointer;
