main mobile ver & header

--- a/app/scss/elements/header.scss
+++ b/app/scss/elements/header.scss
@@ -31,9 +31,14 @@
 }
 
 .head {
+
   &__inner {
     display: flex;
     justify-content: space-between;
+
+    &.active {
+      justify-content: flex-end;
+    }
   }
 
   &__logo {
@@ -155,10 +160,15 @@
     display: flex;
     align-items: center;
     gap: 20px;
+    width: 100%;
   }
 
   &__item {
     position: relative;
+
+    &:nth-last-child(2) {
+      width: 100%;
+    }
   }
 
   &__link {
@@ -166,6 +176,7 @@
     align-items: center;
     gap: 8px;
     color: var(--black, #2E2D2D);
+    white-space: nowrap;
     background: transparent;
     cursor: pointer;
     transition: all 0.2s ease-out;
@@ -240,9 +251,11 @@
     display: flex;
     align-items: center;
     gap: 20px;
+    width: 100%;
 
     &-input {
       background: transparent;
+      width: 100%;
 
       &::-webkit-search-cancel-button {
         -webkit-appearance: none;
@@ -256,6 +269,12 @@
       color: var(--black, #2E2D2D);
     }
   }
+
+  &.active {
+    top: 0;
+    transform: translateY(0%);
+    transition: transform 0.2s ease-out;
+  }
 }
 
 .burger {
@@ -266,6 +285,7 @@
   padding: 0 20px;
   border-radius: 10px;
   background: var(--bg, #F9F9F9);
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 
   h6 {
     color: var(--black, #2E2D2D);
@@ -300,5 +320,55 @@
       top: 4px;
       left: 0;
     }
+  }
+
+  &.active {
+    position: absolute;
+    top: 40px;
+    z-index: 1001;
+    background: transparent;
+    padding: 0;
+    width: 16px;
+    height: 16px;
+
+    h6 {
+      display: none;
+    }
+
+    span {
+      width: 100%;
+      background: transparent;
+
+      &::before {
+        transform: rotate(45deg);
+        top: 0;
+        width: 18px;
+        background: var(--grey, #A7A7A7);
+      }
+
+      &::after {
+        transform: rotate(-45deg);
+        top: 0;
+        width: 18px;
+        background: var(--grey, #A7A7A7);
+      }
+    }
+  }
+}
+
+.bottombar {
+  display: none;
+  margin: 10px 0;
+
+  &__inner {
+    display: flex;
+    gap: 30px;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  button {
+    width: 100%;
   }
 }
