--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -11,6 +11,10 @@ body {
   background: var(--white, #fff);
 }
 
+.no-scroll {
+  overflow: hidden;
+}
+
 .wrapper {
   display: flex;
   flex-direction: column;
