--- a/app/scss/_media.scss
+++ b/app/scss/_media.scss
@@ -59,6 +59,72 @@
   }
 
   .menu {
+    width: 100%;
+    height: 100vh;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 1000;
+    background: var(--white, #fff);
+    transform: translateY(-100%);
+    transition: transform 0.2s ease-out;
+  }
+
+  .menu__inner {
+    background: var(--white, #fff);
+    padding: 40px 0;
+  }
+
+  .menu__list {
+    align-items: flex-start;
+    flex-wrap: wrap;
+  }
+
+  .menu__item {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+  }
+
+  .menu__item:nth-child(2) {
+    order: 8;
+  }
+
+  .menu__item:nth-child(2) .menu__link {
+    color: var(--green, #179860);
+  }
+
+  .menu__item:nth-child(4) {
+    order: 7;
+  }
+
+  .menu__item:nth-child(4) .menu__link {
+    color: var(--green, #179860);
+  }
+
+  .menu__item:nth-last-child(2) {
+    display: none;
+  }
+
+  .menu__item:last-child {
+    width: 40%;
+    margin-left: auto;
+  }
+
+  .menu__items {
+    display: flex;
+    position: relative;
+    top: unset;
+    left: unset;
+    gap: 10px;
+    background: var(--white, #fff);
+  }
+
+  .menu__items-item {
+    padding: 0;
+  }
+
+  .menu__arrow {
     display: none;
   }
 
@@ -70,6 +136,15 @@
     margin-right: -18px;
     width: calc(100% + 36px);
     border-radius: 0;
+  }
+
+  .menu__list::before {
+    content: "";
+    display: block;
+    width: 100%;
+    height: 1px;
+    background: #D9D9D9;
+    order: 6;
   }
 
   .hero__content {
@@ -631,6 +706,10 @@
     display: none;
   }
 
+  .menu.active .menu__item:last-child {
+    width: 30%;
+  }
+
   .calculation__body {
     flex-direction: column;
     gap: 10px;
@@ -901,8 +980,92 @@
 }
 
 @media (max-width: 600px) {
+
+  .head {
+    position: relative;
+    z-index: 1002;
+    background: var(--white, #fff);
+    padding-top: 20px;
+  }
+
   .head__info-item:last-child {
     display: none;
+  }
+
+  .head__inner.active {
+    justify-content: space-between;
+  }
+
+  .menu {
+    position: relative;
+    max-height: 0;
+    overflow: hidden;
+  }
+
+  .menu.active {
+    max-height: 100%;
+    height: 100%;
+  }
+
+  .menu__inner {
+    padding: 20px 0;
+    border-top: 1px solid #EFEFEF;
+    border-radius: 0;
+  }
+
+  .menu__list {
+    flex-direction: column;
+  }
+
+
+  .menu__list::before {
+    display: none;
+  }
+
+  .menu.active .menu__item:last-child {
+    width: 100%;
+  }
+
+  .menu__item:last-child {
+    margin: 0;
+    order: 7;
+  }
+
+  .menu__item:nth-child(4) {
+    order: 4;
+  }
+
+  .menu__item:nth-child(4) .menu__link {
+    color: inherit;
+  }
+
+  .menu__item:nth-child(2) {
+    order: 5;
+  }
+
+  .menu__item:nth-child(2) .menu__link {
+    color: inherit;
+  }
+
+  .menu__item:nth-child(6) {
+    order: 6;
+  }
+
+  .menu__items {
+    max-height: 0;
+    overflow: hidden;
+  }
+
+  .menu__item {
+    width: 100%;
+    padding-bottom: 20px;
+    border-bottom: 1px solid #EFEFEF;
+  }
+
+  .menu__link {
+    font-size: 18px;
+    line-height: 1;
+    font-weight: 700;
   }
 
   .burger {
@@ -911,14 +1074,66 @@
     padding: 0 14px;
   }
 
+  .burger.active span,
   .burger span,
   .burger span::before,
   .burger span::after {
     width: 12px;
+    transition: all 0.2s ease-out;
+  }
+
+  .burger.active span::before,
+  .burger.active span::after {
+    width: 14px;
+    background: var(--green, #179860);
+    transition: all 0.2s ease-out;
   }
 
   .burger h6 {
     font-size: 0;
+  }
+
+  .burger.active {
+    position: relative;
+    top: unset;
+    padding: 0 14px;
+    background: var(--bg, #F9F9F9);
+    width: auto;
+    height: auto;
+  }
+
+  .header.active {
+    overflow: scroll;
+    min-height: 100vh;
+    height: 100%;
+    margin: 0;
+  }
+
+  .header.active .topbar {
+    display: block;
+    order: 4;
+  }
+
+  .topbar__inner {
+    flex-direction: column;
+    padding: 30px 0;
+  }
+
+  .topbar__item {
+    flex-direction: column;
+  }
+
+  .header.active .bottombar {
+    display: block;
+  }
+
+  .header.active .bottombar .head__social {
+    display: flex;
+    width: fit-content;
+  }
+
+  .header.active .bottombar .head__info-item:last-child {
+    display: flex;
   }
 
   .hero__inner {
